# devops-study-app

./: .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json
.devcontainer/: devcontainer.json  dockerfile  mise.toml  setup
.devcontainer/scripts/: setup_project
.github/workflows/: backend-tests.yaml  frontend-tests.yaml  release-please.yaml
src/backend/: .coverage  coverage.xml  dockerfile  pyproject.toml
src/demo/: dockerfile
src/frontend/: .coverage  coverage.xml  pyproject.toml
