[project]
name = "study-tracker-backend"
version = "0.0.0"
description = "Backend API for tracking study time for DevOps certifications"
readme = "README.md"
authors = [
    { name = "Silas Groskreutz", email = "silas@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.120.0",
    "httpx>=0.28.1",
    "uvicorn>=0.38.0",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[project.scripts]
study-tracker-api = "backend.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
]
